--- a/Loan_Status_Prediction.ipynb
+++ b/Loan_Status_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODbAaXBXM+2Uie5DWlHeaQ",
+      "authorship_tag": "ABX9TyOGEcPXhsQARADwkQmFx5FM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,6 +43,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Data collection and processing"
+      ],
+      "metadata": {
+        "id": "FQyCwY5ngAxf"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# loading the dataset to pandas Dataframe\n",
@@ -64,7 +73,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AB8bla59QUM1",
-        "outputId": "ea383d1a-6480-4be3-a6f4-2532a66fc136"
+        "outputId": "0f5911c6-7937-4df6-db7f-5397026df800"
       },
       "execution_count": null,
       "outputs": [
@@ -76,7 +85,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 4
         }
       ]
     },
@@ -89,10 +98,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 287
         },
         "id": "9x5evU38QdZu",
-        "outputId": "0ff8a0ec-20f3-4a12-9659-d53f36f155c7"
+        "outputId": "7a4e1b1c-964a-4a76-c331-4628300411f5"
       },
       "execution_count": null,
       "outputs": [
@@ -123,7 +132,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-66866bdf-d30b-475c-ba6f-b50847434206\">\n",
+              "  <div id=\"df-78e37a62-eec6-42bd-b26d-68bbec77985d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -242,7 +251,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-66866bdf-d30b-475c-ba6f-b50847434206')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-78e37a62-eec6-42bd-b26d-68bbec77985d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -293,12 +302,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-66866bdf-d30b-475c-ba6f-b50847434206 button.colab-df-convert');\n",
+              "          document.querySelector('#df-78e37a62-eec6-42bd-b26d-68bbec77985d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-66866bdf-d30b-475c-ba6f-b50847434206');\n",
+              "          const element = document.querySelector('#df-78e37a62-eec6-42bd-b26d-68bbec77985d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -321,7 +330,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 5
         }
       ]
     },
@@ -343,7 +352,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M7CV1Rt3RnHJ",
-        "outputId": "6ec01f14-9324-40a6-99c0-7e126764e08c"
+        "outputId": "90912831-9aa0-4f94-9cb7-92344d7bd0d9"
       },
       "execution_count": null,
       "outputs": [
@@ -355,7 +364,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 6
         }
       ]
     },
@@ -371,7 +380,7 @@
           "height": 300
         },
         "id": "TOGNnHPKRjOE",
-        "outputId": "4031a932-fa4c-4c5e-da50-8477fba402dd"
+        "outputId": "4d7e6e07-1875-42c6-b84c-18416e46c7d0"
       },
       "execution_count": null,
       "outputs": [
@@ -401,7 +410,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-11271d22-1e36-46c0-b942-193b7e165564\">\n",
+              "  <div id=\"df-23040a47-bd87-49f2-b9fb-b911c380f529\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -496,7 +505,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-11271d22-1e36-46c0-b942-193b7e165564')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-23040a47-bd87-49f2-b9fb-b911c380f529')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -547,12 +556,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-11271d22-1e36-46c0-b942-193b7e165564 button.colab-df-convert');\n",
+              "          document.querySelector('#df-23040a47-bd87-49f2-b9fb-b911c380f529 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-11271d22-1e36-46c0-b942-193b7e165564');\n",
+              "          const element = document.querySelector('#df-23040a47-bd87-49f2-b9fb-b911c380f529');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -575,7 +584,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 7
         }
       ]
     },
@@ -590,7 +599,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W5tql4XxSuKF",
-        "outputId": "8020816f-bdac-480d-9c61-cdfe38bd6aa1"
+        "outputId": "a80ef6e6-6c58-4958-d4e6-33b6ba5e15e9"
       },
       "execution_count": null,
       "outputs": [
@@ -615,7 +624,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 8
         }
       ]
     },
@@ -642,7 +651,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "da558c55-c0e3-429f-a984-ce13d285e3b3"
+        "outputId": "b585f346-0ef5-40af-e9f4-f65de6831412"
       },
       "execution_count": null,
       "outputs": [
@@ -667,7 +676,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 10
         }
       ]
     },
@@ -698,10 +707,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 287
         },
         "id": "RNWjl_Omf5EV",
-        "outputId": "0c1f25f9-bc11-4377-d8ce-333a6dec63b9"
+        "outputId": "692e5e67-45e3-42d8-8b32-028bea9c58d7"
       },
       "execution_count": null,
       "outputs": [
@@ -732,7 +741,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3fd79701-b098-41cc-bf9f-6056919279d9\">\n",
+              "  <div id=\"df-963ab84a-784f-431d-a765-7802e40c8a9c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -851,7 +860,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3fd79701-b098-41cc-bf9f-6056919279d9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-963ab84a-784f-431d-a765-7802e40c8a9c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -902,12 +911,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3fd79701-b098-41cc-bf9f-6056919279d9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-963ab84a-784f-431d-a765-7802e40c8a9c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3fd79701-b098-41cc-bf9f-6056919279d9');\n",
+              "          const element = document.querySelector('#df-963ab84a-784f-431d-a765-7802e40c8a9c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -930,7 +939,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 12
         }
       ]
     },
@@ -945,7 +954,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_BILc9VrgeGp",
-        "outputId": "a8b3de40-2a78-490c-b083-426d67c73bb9"
+        "outputId": "7aefd5d6-97a8-4c9d-f7af-7c3ee9ea3fba"
       },
       "execution_count": null,
       "outputs": [
@@ -961,7 +970,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 13
         }
       ]
     },
@@ -983,10 +992,29 @@
         "loan_dataset['Dependents'].value_counts()"
       ],
       "metadata": {
-        "id": "s8Z8JAQQh4wW"
+        "id": "s8Z8JAQQh4wW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "96721904-5b77-4969-930a-81a73871d8a8"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    274\n",
+              "2     85\n",
+              "1     80\n",
+              "4     41\n",
+              "Name: Dependents, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1009,7 +1037,7 @@
           "height": 466
         },
         "id": "yTsf-YuYildc",
-        "outputId": "b8fc85d5-4a30-413f-b1fa-b14a08f73fc0"
+        "outputId": "e84157b5-3feb-40b6-d208-e0b2cf865dfa"
       },
       "execution_count": null,
       "outputs": [
@@ -1021,7 +1049,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 16
         },
         {
           "output_type": "display_data",
@@ -1047,7 +1075,7 @@
           "height": 466
         },
         "id": "B-dGoZ4fiKEW",
-        "outputId": "a0149fb9-1305-4282-81b0-0fe139180d3a"
+        "outputId": "cf0f9d5a-45a9-48d8-cd2f-a8ea5293edf9"
       },
       "execution_count": null,
       "outputs": [
@@ -1059,7 +1087,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 17
         },
         {
           "output_type": "display_data",
@@ -1094,10 +1122,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 270
         },
         "id": "xcVVSF02noc1",
-        "outputId": "a29c882e-a81b-4c13-9b6d-a739c65d2842"
+        "outputId": "075b9f5f-68d0-4554-a439-43c85daa3e76"
       },
       "execution_count": null,
       "outputs": [
@@ -1128,7 +1156,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ea96593c-85ab-4faa-8eb3-7a2610bc1e0f\">\n",
+              "  <div id=\"df-d14dbe1c-fdb8-4f52-aee8-66a3673f6ca8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1247,7 +1275,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ea96593c-85ab-4faa-8eb3-7a2610bc1e0f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d14dbe1c-fdb8-4f52-aee8-66a3673f6ca8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1298,12 +1326,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ea96593c-85ab-4faa-8eb3-7a2610bc1e0f button.colab-df-convert');\n",
+              "          document.querySelector('#df-d14dbe1c-fdb8-4f52-aee8-66a3673f6ca8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ea96593c-85ab-4faa-8eb3-7a2610bc1e0f');\n",
+              "          const element = document.querySelector('#df-d14dbe1c-fdb8-4f52-aee8-66a3673f6ca8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1326,7 +1354,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 19
         }
       ]
     },
@@ -1350,10 +1378,73 @@
         "print(Y)"
       ],
       "metadata": {
-        "id": "0RaCa4ovqBYd"
+        "id": "0RaCa4ovqBYd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ad2c24e0-7957-44ce-9daa-618772d8c641"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     Gender  Married Dependents  Education  Self_Employed  ApplicantIncome  \\\n",
+            "1         1        1          1          1              0             4583   \n",
+            "2         1        1          0          1              1             3000   \n",
+            "3         1        1          0          0              0             2583   \n",
+            "4         1        0          0          1              0             6000   \n",
+            "5         1        1          2          1              1             5417   \n",
+            "..      ...      ...        ...        ...            ...              ...   \n",
+            "609       0        0          0          1              0             2900   \n",
+            "610       1        1          4          1              0             4106   \n",
+            "611       1        1          1          1              0             8072   \n",
+            "612       1        1          2          1              0             7583   \n",
+            "613       0        0          0          1              1             4583   \n",
+            "\n",
+            "     CoapplicantIncome  LoanAmount  Loan_Amount_Term  Credit_History  \\\n",
+            "1               1508.0       128.0             360.0             1.0   \n",
+            "2                  0.0        66.0             360.0             1.0   \n",
+            "3               2358.0       120.0             360.0             1.0   \n",
+            "4                  0.0       141.0             360.0             1.0   \n",
+            "5               4196.0       267.0             360.0             1.0   \n",
+            "..                 ...         ...               ...             ...   \n",
+            "609                0.0        71.0             360.0             1.0   \n",
+            "610                0.0        40.0             180.0             1.0   \n",
+            "611              240.0       253.0             360.0             1.0   \n",
+            "612                0.0       187.0             360.0             1.0   \n",
+            "613                0.0       133.0             360.0             0.0   \n",
+            "\n",
+            "     Property_Area  \n",
+            "1                0  \n",
+            "2                2  \n",
+            "3                2  \n",
+            "4                2  \n",
+            "5                2  \n",
+            "..             ...  \n",
+            "609              0  \n",
+            "610              0  \n",
+            "611              2  \n",
+            "612              2  \n",
+            "613              1  \n",
+            "\n",
+            "[480 rows x 11 columns]\n",
+            "1      0\n",
+            "2      1\n",
+            "3      1\n",
+            "4      1\n",
+            "5      1\n",
+            "      ..\n",
+            "609    1\n",
+            "610    1\n",
+            "611    1\n",
+            "612    1\n",
+            "613    0\n",
+            "Name: Loan_Status, Length: 480, dtype: int64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1377,7 +1468,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VeDb_lZ3rRrR",
-        "outputId": "21cf6001-31c3-4e0b-c3c8-0f511185fd2c"
+        "outputId": "7851a586-0a4f-44e1-e467-2f7349957a65"
       },
       "execution_count": null,
       "outputs": [
@@ -1423,7 +1514,7 @@
           "height": 74
         },
         "id": "j8tA92Zlr4Fl",
-        "outputId": "e256cb3a-f705-4299-80e4-7ff71fb06fcc"
+        "outputId": "967fde41-1514-4388-b9ee-e03390ca0725"
       },
       "execution_count": null,
       "outputs": [
@@ -1438,7 +1529,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 27
         }
       ]
     },
@@ -1474,7 +1565,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9hbRct4nvZGG",
-        "outputId": "4a1c8eab-22be-4996-d42c-9c1a76613a82"
+        "outputId": "ca805a15-80da-41aa-b4b0-3fc9a2134f59"
       },
       "execution_count": null,
       "outputs": [
@@ -1534,7 +1625,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "input_data=(1,1,1,1,0,4583,1508.0,128.0,360.0,1.0,0)\n",
+        "#changing the input data to a numpy array\n",
+        "input_data_as_numpy_array=np.asarray(input_data)\n",
+        "input_data_reshaped = input_data_as_numpy_array.reshape(1,-1)\n",
+        "prediction = classifier.predict(input_data_reshaped)\n",
+        "print(prediction)\n"
+      ],
       "metadata": {
         "id": "6PRMZBzZw9kN"
       },
